implementations/rust/ockam/ockam/tests/node/fail_if_function_is_not_named_main.rs
#[ockam::node]
fn foo(mut c: ockam::Context) {
    c.stop().await.unwrap();
}
